--- a/assets/css/societe.css
+++ b/assets/css/societe.css
@@ -10,6 +10,7 @@
 #societe .section-titre {
     padding-top: 10vh;
     color: var(--blanc);
+    -webkit-text-stroke: 4px var(--blanc);
     font-size: 10em;
     text-shadow: 3px 3px 15px rgba(0, 0, 0, 0.2);
 }
