--- a/assets/css/histoire.css
+++ b/assets/css/histoire.css
@@ -32,6 +32,7 @@
     font-size: 10em;
     margin-bottom: 18vh;
     color: var(--rouge);
+    -webkit-text-stroke: 4px var(--rouge);
 }
 
 /* ==================== TIMELINE ==================== */
