--- a/assets/css/histoire.css
+++ b/assets/css/histoire.css
@@ -32,7 +32,7 @@
     font-size: 10em;
     margin-bottom: 18vh;
     color: var(--rouge);
-    -webkit-text-stroke: 4px var(--rouge);
+    -webkit-text-stroke: 1.5px var(--rouge);
 }
 
 /* ==================== TIMELINE ==================== */
@@ -335,6 +335,7 @@
         font-size: 6em;
         padding-top: 15vh;
         margin-bottom: 10vh;
+        text-shadow: none;
     }
     
     .timeline-spacer {
