--- a/assets/css/technologie.css
+++ b/assets/css/technologie.css
@@ -10,7 +10,7 @@
 
 #technologie .section-titre {
     color: var(--rouge);
-    -webkit-text-stroke: 4px var(--rouge);
+    -webkit-text-stroke: 1.5px var(--rouge);
     font-size: 10em;
     text-shadow: 3px 3px 15px rgba(0, 0, 0, 0.2);
     padding-top: 10vh;
@@ -396,6 +396,7 @@
         margin-bottom: 25px;
         line-height: 1.1;
         text-align: center;
+        text-shadow: none;
         width: 100%;
         word-wrap: break-word;
         padding-left: 10px;
